fixed box shadow on mobile

--- a/src/Styles/Dashboard.css
+++ b/src/Styles/Dashboard.css
@@ -8,7 +8,7 @@
   border-radius: 20px;
   padding: 30px;
   text-align: center;
-  box-shadow: 0 0 15px #f7c2dd;
+  box-shadow: 0 0 20px #f57dbb;
 }
 
 h2 {
