--- a/src/Styles/Login.css
+++ b/src/Styles/Login.css
@@ -7,7 +7,7 @@
   background-color: #fff0f6;
   padding: 50px;
   border-radius: 20px;
-  box-shadow: 0 10px 25px rgba(255, 105, 180, 0.2);
+  box-shadow: 0 10px 25px rgba(246, 41, 143, 0.499) !important;
   text-align: center;
 }
 
